--- a/main.html
+++ b/main.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./scss/style.css" />
-    <script defer src="./js/main.js"></script>
+    <title>메인페이지</title>
+    <link rel="stylesheet" href="/scss/mainpage css/style.css" />
+    <script defer src="/js/main.js"></script>
   </head>
   <body>
     <nav>
@@ -14,7 +14,7 @@
         <li><a href="#">NIGHT: EVENT</a></li>
         <li><a href="#">NIGHT: PALACE</a></li>
         <li><a href="#">NIGHT: DRIVE COURSE</a></li>
-        <li><a href="#">NIGHT: VIEW SPOT</a></li>
+        <li><a href="/src/view.html">NIGHT: VIEW SPOT</a></li>
       </ul>
     </nav>
     <figure>
