폴더구조 정리

--- a/src/drive.html
+++ b/src/drive.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 
     <!-- drive css -->
-    <link rel="stylesheet" href="./scss/drive.css" />
+    <link rel="stylesheet" href="/scss/drive css/drive.css" />
 
     <!-- Main js -->
     <!-- <script defer src="./js/main.js"></script> -->
