feat. 우측 메뉴로고 및 현대차 페이지 모방 제작중

--- a/main.html
+++ b/main.html
@@ -12,9 +12,9 @@
     <nav>
       <ul class="nav">
         <li><a href="#">NIGHT: EVENT</a></li>
-        <li><a href="#">NIGHT: PALACE</a></li>
-        <li><a href="#">NIGHT: DRIVE COURSE</a></li>
-        <li><a href="/src/view.html">NIGHT: VIEW SPOT</a></li>
+        <li><a href="/src/palace.html">NIGHT: PALACE</a></li>
+        <li><a href="/src/drive.html">NIGHT: DRIVE COURSE</a></li>
+        <li><a href="/src/view.html">NIGHT: NIGHTSCAPE SPOT</a></li>
       </ul>
     </nav>
     <figure>
