--- a/src/view.html
+++ b/src/view.html
@@ -10,12 +10,16 @@
   </head>
   <body>
     <header>
-      <a href="/main.html"> HEADER</a>
+      <a href="/main.html"> NIGHT IN SEOUL</a>
+      <a href="#" class="right-menu">NIGHT: NIGHTSCAPE SPOT</a>
     </header>
     <figure>
       <img src="/video/남산타워화질good.jpg" alt="남산타워" />
       <article>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p>
+          Enjoy The Night Scape <br />
+          Of Seoul!
+        </p>
       </article>
     </figure>
 
