feat. scrollTop 공통버튼 추가

--- a/src/palace.html
+++ b/src/palace.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script
+      defer
       src="https://kit.fontawesome.com/7090071867.js"
       crossorigin="anonymous"
     ></script>
