--- a/src/drive.html
+++ b/src/drive.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 
     <!-- drive css -->
-    <link rel="stylesheet" href="/scss/drive css/drive.css" />
+    <link rel="stylesheet" href="../scss/drive css/drive.css" />
 
     <!-- Main js -->
     <!-- <script defer src="./js/main.js"></script> -->
@@ -24,8 +24,6 @@
       <!-- Logo -->
       <div class="logo">
         <span class="slideup">NIGHT</span>
-        <span class="slideup">OF</span>
-        <span class="slideup">SEOUL</span>
       </div>
 
       <!-- Thema -->
@@ -37,21 +35,42 @@
           <li>PLACE</li>
         </ul>
       </div>
-
-      <!-- Prev Btn -->
-      <div class="btn btn--prev">
-        <a href="#"><i class="fa-solid fa-arrow-left"></i></a>
-      </div>
     </header>
-
     <!-- Main Movie-->
     <figure>
-      <video src="./video/video.mp4" autoplay muted loop></video>
+      <video src="../video/video.mp4" autoplay muted loop></video>
     </figure>
 
     <!-- Load Map -->
     <section>
-      <div id="map">Map</div>
+      <div id="map">
+        <img src="../image/drive1.jpg" alt="" class="img image" />
+        <img src="../image/drive2.jpg" alt="" class="img image" />
+        <img src="../image/drive3.jpg" alt="" class="img image" />
+      </div>
+
+      <div class="sub-btn">
+        <button class="btn btn1">
+          <span>드라이브 코스 1</span>
+          <br />
+          <span>40km</span>
+        </button>
+        <button class="btn btn2">
+          <span>드라이브 코스 1</span>
+          <br />
+          <span>40km</span>
+        </button>
+        <button class="btn btn3">
+          <span>드라이브 코스 1</span>
+          <br />
+          <span>40km</span>
+        </button>
+        <button class="btn btn4">
+          <span>드라이브 코스 1</span>
+          <br />
+          <span>40km</span>
+        </button>
+      </div>
     </section>
   </body>
 </html>
