feat.공통버튼 추가 및 view페이지 기능추가

--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
   <body>
     <nav>
       <ul class="nav">
-        <li><a href="#">NIGHT: EVENT</a></li>
+        <li><a href="/src/event.html">NIGHT: EVENT</a></li>
         <li><a href="/src/palace.html">NIGHT: PALACE</a></li>
         <li><a href="/src/drive.html">NIGHT: DRIVE COURSE</a></li>
         <li><a href="/src/view.html">NIGHT: NIGHTSCAPE SPOT</a></li>
