--- a/src/palace.html
+++ b/src/palace.html
@@ -5,20 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- FONT AWESOME -->
     <script
       defer
       src="https://kit.fontawesome.com/7090071867.js"
       crossorigin="anonymous"
     ></script>
+    <!-- SCSS -->
     <link rel="stylesheet" href="/scss/palace css/palace.css" />
+    <!-- JS -->
     <script defer src="/js/palace.js"></script>
+    <script defer src="/js/commonButton.js"></script>
   </head>
 
   <body>
+    <header>
+      <a href="/main.html"> NIGHT IN SEOUL</a>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </header>
+    <section></section>
     <!-- 경복궁 -->
-
     <!-- 덕수궁 -->
     <!-- 창경궁 -->
     <!-- 창덕궁 -->
+
+    <!-- BUTTON -->
+    <button id="commonUpButton">
+      <i class="fa-solid fa-arrow-up"></i>
+    </button>
   </body>
 </html>
