--- a/src/view.html
+++ b/src/view.html
@@ -20,25 +20,25 @@
   <body>
     <!-- HEADER -->
     <header>
-      <a href="/main.html"> NIGHT IN SEOUL</a>
+      <a href="/main.html" id="headerLogo"> NIGHT IN SEOUL</a>
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li><a href="/src/drive.html">DRIVE COURSE</a></li>
+        <li><a href="/src/event.html">EVENT</a></li>
+        <li><a href="/src/palace.html">PALACE</a></li>
+        <li><a href="/src/view.html">VIEW</a></li>
       </ul>
     </header>
-    <figure>
-      <img src="/video/spot-image/남산타워화질good.jpg" alt="남산타워" />
-      <article>
-        <p>
-          Enjoy The Night Scape <br />
-          Of Seoul!
-        </p>
-      </article>
-    </figure>
     <!-- CONTENTS -->
     <section class="scroller-section">
+      <figure class="figureSection">
+        <img src="/video/spot-image/남산타워화질good.jpg" alt="남산타워" />
+        <article>
+          <p>
+            Enjoy The Night Scape <br />
+            Of Seoul!
+          </p>
+        </article>
+      </figure>
       <div>
         <figure>
           <img src="/video/spot-image/서울로7017.jpeg" alt="서울로7017" />
