feat. view페이지 애니메이션 및 기능 수정

--- a/src/view.html
+++ b/src/view.html
@@ -39,21 +39,21 @@
           </p>
         </article>
       </figure>
+      <!-- <div>0</div> -->
+      <div>5</div>
+      <div>4</div>
+      <div>3</div>
+      <div>2</div>
       <div>
         <figure>
+          1
           <img src="/video/spot-image/서울로7017.jpeg" alt="서울로7017" />
-          <p>seoulro 7017</p>
+          <article>SEOULRO 7017</article>
         </figure>
-        <figure style="flex-direction: row-reverse">
-          <img src="/video/spot-image/서울로2.jpg" alt="서울로7017" />
-          <p>...</p>
+        <figure class="map">
+          <span>MAP</span>
         </figure>
       </div>
-      <div>1</div>
-      <div>2</div>
-      <div>3</div>
-      <div>4</div>
-      <div>5</div>
     </section>
     <section class="emptyground"></section>
     <!-- BUTTON -->
