스크롤 페이지 이동  추가

--- a/src/event.html
+++ b/src/event.html
@@ -32,9 +32,27 @@
     </header>
 
     <!-- SECTION-VIDEO -->
-    <section class="video">
+    <figure class="video">
       <video src="../video/event-bg.mp4" autoplay muted loop></video>
+    </figure>
+
+    <!-- SECTION-1 -->
+    <section class="section-1">
+      <div class="inner"></div>
     </section>
+
+    <section class="section-2">
+      <div class="inner"></div>
+    </section>
+
+    <section class="section-3">
+      <div class="inner"></div>
+    </section>
+
+    <!-- <div class="content" id="content-1">content1</div>
+    <div class="content" id="content-2">content2</div>
+    <div class="content" id="content-3">content3</div> -->
+
     <!-- BUTTON -->
     <button id="commonUpButton">
       <i class="fa-solid fa-arrow-up"></i>
