feat.고궁헤더 및 영상추가

--- a/src/palace.html
+++ b/src/palace.html
@@ -1,42 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <!-- FONT AWESOME -->
-    <script
-      defer
-      src="https://kit.fontawesome.com/7090071867.js"
-      crossorigin="anonymous"
-    ></script>
-    <!-- SCSS -->
-    <link rel="stylesheet" href="/scss/palace css/palace.css" />
-    <!-- JS -->
-    <script defer src="/js/palace.js"></script>
-    <script defer src="/js/commonButton.js"></script>
-  </head>
 
-  <body>
-    <header>
-      <a href="/main.html"> NIGHT IN SEOUL</a>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </header>
-    <section></section>
-    <!-- 경복궁 -->
-    <!-- 덕수궁 -->
-    <!-- 창경궁 -->
-    <!-- 창덕궁 -->
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <!-- FONT AWESOME -->
+  <script defer src="https://kit.fontawesome.com/7090071867.js" crossorigin="anonymous"></script>
+  <!-- SCSS -->
+  <link rel="stylesheet" href="/scss/palace css/palace.css" />
+  <!-- JS -->
+  <script defer src="/js/palace.js"></script>
+  <script defer src="/js/commonButton.js"></script>
+</head>
 
-    <!-- BUTTON -->
-    <button id="commonUpButton">
-      <i class="fa-solid fa-arrow-up"></i>
-    </button>
-  </body>
+<body>
+  <header>
+    <a href="/main.html"> NIGHT IN SEOUL</a>
+    <ul>
+      <li>Drive</li>
+      <li>Events</li>
+      <li>Palace</li>
+      <li>View</li>
+    </ul>
+  </header>
+  <figure>
+    <video src="../video/palace/8K Timelapse 광화문 야간개장 타임랩스 A7R3 타임랩스 ⧸ Timelapse 영상 (무료 타임랩스⧸ Royalty free video).mp4"
+      autoplay muted loop></video>
+    <article class="text">
+      <p>Palace<br /> Night</p>
+    </article>
+  </figure>
+
+  <!-- 경복궁 -->
+  <section class="kb">
+    <div class="kb-container">
+      <div class="kb-container-inner">
+        <div></div>
+      </div>
+      <div class="inner-container">
+        <main class="project-overview">
+          <div class="main-message"></div>
+          <div class="spacer"></div>
+          <div class="main-project"></div>
+        </main>
+      </div>
+    </div>
+  </section>
+
+
+
+  <!-- 덕수궁 -->
+  <section class="palace-ds">
+
+  </section>
+  <!-- 창경궁 -->
+  <section class="palace-cdk">
+
+  </section>
+
+
+  <!-- BUTTON -->
+  <button id="commonUpButton">
+    <i class="fa-solid fa-arrow-up"></i>
+  </button>
+</body>
+
 </html>
