--- a/src/view.html
+++ b/src/view.html
@@ -40,19 +40,25 @@
         </article>
       </figure>
       <!-- <div>0</div> -->
-      <div>5</div>
-      <div>4</div>
-      <div>3</div>
-      <div>2</div>
-      <div>
-        <figure>
-          1
-          <img src="/video/spot-image/서울로7017.jpeg" alt="서울로7017" />
-          <article>SEOULRO 7017</article>
-        </figure>
-        <figure class="map">
-          <span>MAP</span>
-        </figure>
+      <div class="slider">5</div>
+      <div class="slider">4</div>
+      <div class="slider">3</div>
+      <div class="slider">2</div>
+      <div class="slider">
+        <div class="slider-content">
+          <figure class="insta">
+            <article class="insta__header">
+              <div class="circleline">
+                <div class="circle"></div>
+              </div>
+              <p class="name">KDT5th-TEAM30s</p>
+            </article>
+            <img src="/video/spot-image/서울로2.jpg" alt="서울로" />
+            <article class="emoge"></article>
+            <i class="fa-regular fa-heart"></i>
+          </figure>
+        </div>
+        <div class="slider-content"></div>
       </div>
     </section>
     <section class="emptyground"></section>
