feat. drive페이지 영상 및 이미지 추가

--- a/src/drive.html
+++ b/src/drive.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Night In Seoul</title>
 
     <!-- drive css -->
     <link rel="stylesheet" href="../scss/drive css/drive.css" />
@@ -26,7 +26,7 @@
     <header>
       <!-- Logo -->
       <div class="logo">
-        <span class="slideup">NIGHT</span>
+        <span class="slideup">Night In Seoul</span>
       </div>
 
       <!-- Thema -->
@@ -39,15 +39,21 @@
         </ul>
       </div>
     </header>
+
     <!-- Main Movie-->
     <figure>
-      <video src="../video/drive.mp4" autoplay muted loop></video>
+      <video
+        src="../video/제목 없는 동영상 - Clipchamp로 제작.mp4"
+        autoplay
+        muted
+        loop
+      ></video>
     </figure>
-
-    <!-- Load Map -->
+    <!-- Map -->
     <section id="two">
+      <h1>드라이브 코스</h1>
       <div class="map">
-        <img src="../image/drive1.jpg" alt="" class="image image1" />
+        <img src="../video/banpo.gif" alt="" class="image image1" />
         <img
           src="../image/drive2.jpg"
           alt="이미지1"
@@ -62,6 +68,7 @@
         />
       </div>
 
+      <!-- Sub-btn -->
       <div class="sub-btn">
         <button class="btn btn1">
           <span>드라이브 코스 1</span>
@@ -85,6 +92,17 @@
         </button>
       </div>
     </section>
+
+    <!-- Detailed Page-->
+    <section>
+      <div class="detail">
+        <img src="../video/drive1.png" alt="" class="detail_item" />
+      </div>
+      <div class="detail_contents">
+        <img src="" alt="" class="detail_tex" />
+      </div>
+    </section>
+
     <!-- BUTTON -->
     <button id="commonUpButton">
       <i class="fa-solid fa-arrow-up"></i>
