feat. section-1 layout 추가

--- a/src/event.html
+++ b/src/event.html
@@ -38,7 +38,29 @@
 
     <!-- SECTION-1 -->
     <section class="section-1">
-      <div class="inner"></div>
+      <div class="container">
+        <div class="line-1">
+          <div class="element">
+            <div class="content">
+              <p class="title">서대문 문화재 야행</p>
+              <div class="text">
+                행사 장소 : 서대문 일대 / 독립공원<br />
+                이용요금 : 무료<br />
+                홈페이지 : <a href="http://www.sdmnightroad.com" target="_blank">www.sdmnightroad.com</a>
+              </div>
+            </div>
+          </div>
+          <div class="element"><img src="../video/event/서대문_01.jpg" alt="" /></div>
+          <div class="element"><img src="../video/event/서대문_02.jpg" alt="" /></div>
+          <div class="element"><img src="../video/event/서대문_03.jpg" alt="" /></div>
+        </div>
+        <div class="line-2">
+          <div class="element"></div>
+          <div class="element"></div>
+          <div class="element"></div>
+          <div class="element"></div>
+        </div>
+      </div>
     </section>
 
     <section class="section-2">
@@ -49,9 +71,9 @@
       <div class="inner"></div>
     </section>
 
-    <!-- <div class="content" id="content-1">content1</div>
-    <div class="content" id="content-2">content2</div>
-    <div class="content" id="content-3">content3</div> -->
+    <section class="section-4">
+      <div class="inner"></div>
+    </section>
 
     <!-- BUTTON -->
     <button id="commonUpButton">
