경복궁 레이아웃 추가

--- a/src/palace.html
+++ b/src/palace.html
@@ -26,7 +26,8 @@
     </ul>
   </header>
   <figure>
-    <video src="../video/palace/8K Timelapse 광화문 야간개장 타임랩스 A7R3 타임랩스 ⧸ Timelapse 영상 (무료 타임랩스⧸ Royalty free video).mp4"
+    <video
+      src="../video/palace/8K_Timelapse_광화문_야간개장_타임랩스_A7R3_타임랩스_⧸_Timelapse_영상__무료_타임랩스⧸_Royalty_free_video__AdobeExpress.mp4"
       autoplay muted loop></video>
     <article class="text">
       <p>Palace<br /> Night</p>
@@ -34,30 +35,38 @@
   </figure>
 
   <!-- 경복궁 -->
-  <section class="kb">
-    <div class="kb-container">
-      <div class="kb-container-inner">
-        <div></div>
+  <section class="palace-kb">
+    <div class="container">
+      <div class="card">
+        <img src="../video/palace/kb-gwanghwa.jpg" />
+        <div class="card__head">광화문</div>
       </div>
-      <div class="inner-container">
-        <main class="project-overview">
-          <div class="main-message"></div>
-          <div class="spacer"></div>
-          <div class="main-project"></div>
-        </main>
+      <div class="card">
+        <img src="../video/palace/kb-guenjung.jpg" />
+        <div class="card__head">근정전</div>
+      </div>
+      <div class="card">
+        <img src="../video/palace/kb-hyangwon.jpg" />
+        <div class="card__head">향원루</div>
+      </div>
+      <div class="card">
+        <img src="../video/palace/kb-chilgoong.jpeg" />
+        <div class="card__head">칠궁</div>
+      </div>
+      <div class="card">
+        <img src="../video/palace/kb-kyunghoi.jpg" />
+        <div class="card__head">경회루</div>
       </div>
     </div>
   </section>
 
 
-
   <!-- 덕수궁 -->
-  <section class="palace-ds">
 
-  </section>
+
+
   <!-- 창경궁 -->
   <section class="palace-cdk">
-
   </section>
 
 
