feat.슬라이더 섹션 수정

--- a/src/view.html
+++ b/src/view.html
@@ -39,9 +39,6 @@
           </p>
         </article>
       </figure>
-      <!-- <div>0</div> -->
-      <div class="slider">5</div>
-      <div class="slider">4</div>
       <div class="slider">3</div>
       <div class="slider">2</div>
       <div class="slider">
@@ -51,14 +48,26 @@
               <div class="circleline">
                 <div class="circle"></div>
               </div>
-              <p class="name">KDT5th-TEAM30s</p>
+              <p class="name">KDT_5th_TEAM30S</p>
             </article>
             <img src="/video/spot-image/서울로2.jpg" alt="서울로" />
-            <article class="emoge"></article>
-            <i class="fa-regular fa-heart"></i>
+            <article class="emoge">
+              <i class="fa-solid fa-heart heart"></i>
+              <i class="fa-regular fa-comment"></i>
+              <i class="fa-regular fa-paper-plane"></i>
+            </article>
           </figure>
         </div>
-        <div class="slider-content"></div>
+        <div class="slider-content2">
+          <figure class="kakao">
+            <div class="chatContainer">
+              <div class="chatName">TEAM30S</div>
+              <!-- <div class="chatUser"></div> -->
+              <!-- <div class="chat"></div> -->
+              <!-- <div class="ownChat">와 여기 어디야 ?</div> -->
+            </div>
+          </figure>
+        </div>
       </div>
     </section>
     <section class="emptyground"></section>
