--- a/src/view.html
+++ b/src/view.html
@@ -39,11 +39,19 @@
           </p>
         </article>
       </figure>
-      <div class="slider">3</div>
-      <div class="slider">2</div>
       <div class="slider">
-        <div class="slider-content">
-          <figure class="insta">
+        <!-- 3 -->
+        3
+      </div>
+      <div class="slider" id="slider2">
+        <!-- 2 -->
+        <div>하...</div>
+        <div>뭐하지</div>
+        <div>ㅠㅠ</div>
+      </div>
+      <div class="slider" id="slider1">
+        <div class="slider-content" id="instaBg">
+          <figure class="insta" id="instaPic1">
             <article class="insta__header">
               <div class="circleline">
                 <div class="circle"></div>
@@ -52,19 +60,16 @@
             </article>
             <img src="/video/spot-image/서울로2.jpg" alt="서울로" />
             <article class="emoge">
-              <i class="fa-solid fa-heart heart"></i>
+              <i class="fa-solid fa-heart heart1"></i>
               <i class="fa-regular fa-comment"></i>
               <i class="fa-regular fa-paper-plane"></i>
             </article>
           </figure>
         </div>
-        <div class="slider-content2">
-          <figure class="kakao">
-            <div class="chatContainer">
+        <div class="slider-content2" id="kakaoBg">
+          <figure class="kakao" id="kakaoPic1">
+            <div class="chatContainer" id="chatContainer1">
               <div class="chatName">TEAM30S</div>
-              <!-- <div class="chatUser"></div> -->
-              <!-- <div class="chat"></div> -->
-              <!-- <div class="ownChat">와 여기 어디야 ?</div> -->
             </div>
           </figure>
         </div>
