section-1 이미지 애니메이션 추가

--- a/src/event.html
+++ b/src/event.html
@@ -39,28 +39,32 @@
     <!-- SECTION-1 -->
     <section class="section-1">
       <div class="container">
-        <div class="line-1">
-          <div class="element">
-            <div class="content">
-              <p class="title">서대문 문화재 야행</p>
-              <div class="text">
-                행사 장소 : 서대문 일대 / 독립공원<br />
-                이용요금 : 무료<br />
-                홈페이지 : <a href="http://www.sdmnightroad.com" target="_blank">www.sdmnightroad.com</a>
+        <div class="line">
+          <div class="line-1">
+            <div class="element">
+              <div class="content">
+                <p class="title">서대문 문화재 야행</p>
+                <div class="text">
+                  행사 장소 : 서대문 일대 / 독립공원<br />
+                  이용요금 : 무료<br />
+                  홈페이지 : <a href="http://www.sdmnightroad.com" target="_blank">www.sdmnightroad.com</a>
+                </div>
               </div>
             </div>
+            <div class="element" id="sec-1-el-1"><img src="../video/event/서대문_01.jpg" alt="" /></div>
+            <div class="element" id="sec-1-el-2"><img src="../video/event/서대문_02.jpg" alt="" /></div>
+            <div class="element" id="sec-1-el-3"><img src="../video/event/서대문_03.jpg" alt="" /></div>
           </div>
-          <div class="element"><img src="../video/event/서대문_01.jpg" alt="" /></div>
-          <div class="element"><img src="../video/event/서대문_02.jpg" alt="" /></div>
-          <div class="element"><img src="../video/event/서대문_03.jpg" alt="" /></div>
+          <div class="line-2">
+            <div class="element" id="sec-1-el-4"><img src="../video/event/서대문_04.jpg" alt="" /></div>
+            <div class="element" id="sec-1-el-5"><img src="../video/event/서대문_05.jpg" alt="" /></div>
+            <div class="element" id="sec-1-el-6"><img src="../video/event/서대문_06.jpg" alt="" /></div>
+            <div class="element" id="sec-1-el-7"><img src="../video/event/서대문_07.jpg" alt="" /></div>
+          </div>
         </div>
-        <div class="line-2">
-          <div class="element"></div>
-          <div class="element"></div>
-          <div class="element"></div>
-          <div class="element"></div>
-        </div>
+        <div class="detailPopup"><img src="" alt="" /></div>
       </div>
+      <div class="bottom-text">가을 밤 아래, 별을 따라 걷는 길. 서대문구의 문화재와 동주의 이야기를 듣는 서대문구 문화재야행</div>
     </section>
 
     <section class="section-2">
