배경및보더확인

--- a/src/palace.html
+++ b/src/palace.html
@@ -22,7 +22,7 @@
       <li>Drive</li>
       <li>Events</li>
       <li>Palace</li>
-      <li>View</li>
+      <li>View</li>lo
     </ul>
   </header>
   <figure>
