feat. view페이지 슬라이더 섹션1 완성

--- a/src/view.html
+++ b/src/view.html
@@ -46,8 +46,7 @@
       <div class="slider" id="slider2">
         <!-- 2 -->
         <div>하...</div>
-        <div>뭐하지</div>
-        <div>ㅠㅠ</div>
+        <div class="reverse">뭐하지</div>
       </div>
       <div class="slider" id="slider1">
         <div class="slider-content" id="instaBg">
