덕수궁 및 창경궁 수정

--- a/src/palace.html
+++ b/src/palace.html
@@ -62,11 +62,116 @@
 
 
   <!-- 덕수궁 -->
+  <section class="palace-ds">
+    <div class="slider-container">
+      <div class="left-slide">
+        <div class="item1">
+          <h1>Nature flower</h1>
+          <p>all in pink</p>
+        </div>
+        <div class="item2">
+          <h1>Bluuue Sky</h1>
+          <p>with it's mountains</p>
+        </div>
+        <div class="item3">
+          <h1>Lonely castle</h1>
+          <p>in the wilderness</p>
+        </div>
+        <div class="item4">
+          <h1>Flying eagle</h1>
+          <p>in the sunset</p>
+        </div>
+      </div>
+      <div class="right-slide">
+        <div class="item1"></div>
+        <div class="item2"></div>
+        <div class="item3"></div>
+        <div class="item4"></div>
+      </div>
 
+      <div class="action-buttons">
+        <button class="down-button">
+          <i class="fas fa-arrow-down"></i>
+        </button>
+        <button class="up-button">
+          <i class="fas fa-arrow-up"></i>
+        </button>
+      </div>
+    </div>
+  </section>
 
 
   <!-- 창경궁 -->
   <section class="palace-cdk">
+    <div class="container">
+
+      <div class="mySlides">
+        <div class="numbertext">1 / 6</div>
+        <img src="../video/palace/ck-buyong.jpg" style="width:100%; height:300px">
+      </div>
+
+      <div class="mySlides">
+        <div class="numbertext">2 / 6</div>
+        <img src="../video/palace/ck-chundang.jpg" style="width:100%; height:300px">
+      </div>
+
+      <div class="mySlides">
+        <div class="numbertext">3 / 6</div>
+        <img src="../video/palace/ck-daejo.jpg" style="width:100%; height:300px">
+      </div>
+
+      <div class="mySlides">
+        <div class="numbertext">4 / 6</div>
+        <img src="../video/palace/ck-huijeong.jpg" style="width:100%; height:300px">
+      </div>
+
+      <div class="mySlides">
+        <div class="numbertext">5 / 6</div>
+        <img src="../video/palace/ck-injeong.jpeg" style="width:100%; height:300px">
+      </div>
+
+      <div class="mySlides">
+        <div class="numbertext">6 / 6</div>
+        <img src="../video/palace/ck-okcheonmyungjeon.jpg" style="width:100%; height:300px">
+      </div>
+
+      <!-- Next and previous buttons -->
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+      <!-- Image text -->
+      <div class="caption-container">
+        <p id="caption"></p>
+      </div>
+
+      <!-- Thumbnail images -->
+      <div class="row">
+        <div class="column">
+          <img class="demo-cursor" src="../video/palace/ck-buyong.jpg" style="width:100%" onclick="currentSlide(1)"
+            alt="부용전">
+        </div>
+        <div class="column">
+          <img class="demo-cursor" src="../video/palace/ck-chundang.jpg" style="width:100%" onclick="currentSlide(2)"
+            alt="춘당지">
+        </div>
+        <div class="column">
+          <img class="demo-cursor" src="../video/palace/ck-daejo.jpg" style="width:100%" onclick="currentSlide(3)"
+            alt="대조전">
+        </div>
+        <div class="column">
+          <img class="demo-cursor" src="../video/palace/ck-huijeong.jpg" style="width:100%" onclick="currentSlide(4)"
+            alt="희정루">
+        </div>
+        <div class="column">
+          <img class="demo-cursor" src="../video/palace/ck-injeong.jpeg" style="width:100%" onclick="currentSlide(5)"
+            alt="인정전">
+        </div>
+        <div class="column">
+          <img class="demo-cursor" src="../video/palace/ck-okcheonmyungjeon.jpg" style="width:100%"
+            onclick="currentSlide(6)" alt="옥천전 & 명정전">
+        </div>
+      </div>
+    </div>
   </section>
 
 
