feat. view페이지 슬라이더 섹션2페이지 수정

--- a/src/view.html
+++ b/src/view.html
@@ -45,8 +45,18 @@
       </div>
       <div class="slider" id="slider2">
         <!-- 2 -->
-        <div>하...</div>
-        <div class="reverse">뭐하지</div>
+        <div class="correct">
+          <figure class="correct-content">
+            <img src="/video/spot-image/반포대교 분수.jpg" alt="반포대교" />
+          </figure>
+          <article class="descript">BANPO BRIDGE</article>
+        </div>
+        <div class="reverse">
+          <figure class="reverse-content">
+            <img src="/video/spot-image/낙산공원.jpg" alt="낙산공원" />
+          </figure>
+          <article class="arti"></article>
+        </div>
       </div>
       <div class="slider" id="slider1">
         <div class="slider-content" id="instaBg">
@@ -57,7 +67,7 @@
               </div>
               <p class="name">KDT_5th_TEAM30S</p>
             </article>
-            <img src="/video/spot-image/서울로2.jpg" alt="서울로" />
+            <img src="/video/spot-image/서울로 화질.jpg" alt="서울로" />
             <article class="emoge">
               <i class="fa-solid fa-heart heart1"></i>
               <i class="fa-regular fa-comment"></i>
