--- a/main.html
+++ b/main.html
@@ -11,10 +11,18 @@
   <body>
     <nav>
       <ul class="nav">
-        <li><a href="/src/event.html">NIGHT: EVENT</a></li>
-        <li><a href="/src/palace.html">NIGHT: PALACE</a></li>
-        <li><a href="/src/drive.html">NIGHT: DRIVE COURSE</a></li>
-        <li><a href="/src/view.html">NIGHT: NIGHTSCAPE SPOT</a></li>
+        <li>
+          <a href="/src/event.html">NIGHT: EVENT</a>
+        </li>
+        <li>
+          <a href="/src/palace.html">NIGHT: PALACE</a>
+        </li>
+        <li>
+          <a href="/src/drive.html">NIGHT: DRIVE COURSE</a>
+        </li>
+        <li>
+          <a href="/src/view.html">NIGHT: NIGHTSCAPE SPOT</a>
+        </li>
       </ul>
     </nav>
     <figure>
