feat. palace 페이지 레이아웃 및 기능추가

--- a/src/palace.html
+++ b/src/palace.html
@@ -22,7 +22,7 @@
       <li>Drive</li>
       <li>Events</li>
       <li>Palace</li>
-      <li>View</li>lo
+      <li>View</li>
     </ul>
   </header>
   <figure>
@@ -106,33 +106,33 @@
     <div class="container">
 
       <div class="mySlides">
-        <div class="numbertext">1 / 6</div>
-        <img src="../video/palace/ck-buyong.jpg" style="width:100%; height:300px">
+        <!-- <div class="numbertext">1 / 6</div> -->
+        <img src="../video/palace/ck-buyong.jpg" style="width:100%">
       </div>
 
       <div class="mySlides">
-        <div class="numbertext">2 / 6</div>
-        <img src="../video/palace/ck-chundang.jpg" style="width:100%; height:300px">
+        <!-- <div class="numbertext">2 / 6</div> -->
+        <img src="../video/palace/ck-chundang.jpg" style="width:100%">
       </div>
 
       <div class="mySlides">
-        <div class="numbertext">3 / 6</div>
-        <img src="../video/palace/ck-daejo.jpg" style="width:100%; height:300px">
+        <!-- <div class="numbertext">3 / 6</div> -->
+        <img src="../video/palace/ck-daejo.jpg" style="width:100%">
       </div>
 
       <div class="mySlides">
-        <div class="numbertext">4 / 6</div>
-        <img src="../video/palace/ck-huijeong.jpg" style="width:100%; height:300px">
+        <!-- <div class="numbertext">4 / 6</div> -->
+        <img src="../video/palace/ck-huijeong.jpg" style="width:100%">
       </div>
 
       <div class="mySlides">
-        <div class="numbertext">5 / 6</div>
-        <img src="../video/palace/ck-injeong.jpeg" style="width:100%; height:300px">
+        <!-- <div class="numbertext">5 / 6</div> -->
+        <img src="../video/palace/ck-injeong.jpeg" style="width:100%">
       </div>
 
       <div class="mySlides">
-        <div class="numbertext">6 / 6</div>
-        <img src="../video/palace/ck-okcheonmyungjeon.jpg" style="width:100%; height:300px">
+        <!-- <div class="numbertext">6 / 6</div> -->
+        <img src="../video/palace/ck-okcheonmyungjeon.jpg" style="width:100%">
       </div>
 
       <!-- Next and previous buttons -->
